// COOKie — Identity Service database schema
//
// Only Identity owns these tables. IDs carried to other services are logical
// references; cross-service foreign keys are forbidden.

Table accounts as Accounts {
  id uuid [pk, note: 'UUIDv7 generated by Identity']
  status varchar [not null, default: 'ACTIVE', note: 'ACTIVE | DELETION_PENDING; deletion is irreversible in v1']
  created_at timestamptz [not null]

  Note: 'Service: Identity aggregate root. A row exists only after proof-bound email registration succeeds; v1 transitions only ACTIVE -> DELETION_PENDING'
}

Table email_credentials as EmailCredentials {
  account_id uuid [pk, ref: - Accounts.id]
  email varchar [not null, unique, note: 'canonical structural value: ASCII local part + UTS #46 IDNA lower-case domain; new registrations currently admit ru or xn--p1ai']
  password_hash varchar [not null, note: 'Argon2id PHC copied from the winning registration attempt']
  failed_login_count integer [not null, default: 0]
  locked_until timestamptz [null, note: 'Login backoff; account deletion also writes a far-future value so rolling old binaries deny login while they still ignore Accounts.status']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Service: Identity. One email/password credential per account; email and Argon2id hash are retained while distributed deletion is pending'
}

Table account_deletion_requests as AccountDeletionRequests {
  id uuid [pk, note: 'Server-generated UUIDv7 returned as deletionRequestId']
  account_id uuid [not null, ref: > Accounts.id, note: 'Restrictive/default NO ACTION ownership FK; deletion must never cascade away workflow evidence']
  idempotency_key uuid [not null, note: 'Client-generated RFC 4122 UUIDv4 scoped to the account; never logged or copied into events']
  status varchar [not null, note: 'DELETION_PENDING is the only state implemented in v1']
  requested_at timestamptz [not null, note: 'PostgreSQL-backed command time returned unchanged on every accepted retry']

  indexes {
    (account_id, idempotency_key) [unique, name: 'uq_account_deletion_requests_account_key', note: 'One account + one key always identifies the same accepted request']
    (account_id) [unique, name: 'uq_account_deletion_requests_pending_account', note: 'Partial: WHERE status = DELETION_PENDING; prevents concurrent active deletion processes for one account']
    (requested_at, id) [name: 'idx_account_deletion_requests_requested_at', note: 'Supports deterministic lifecycle/reconciliation scans without deleting pending evidence']
  }

  Note: 'Service: Identity aggregate root. Exact retries and later keys return this row; wrong-password attempts create no row. There is no v1 completion, grace period or cancellation'
}

Table registration_attempts as RegistrationAttempts {
  id uuid [pk, note: 'Client-generated cryptographically random idempotency/correlation UUID for one logical signup attempt']
  email varchar [not null, note: 'canonical target email; no Account exists yet']
  registration_proof_hash varchar [not null, note: 'SHA-256 of the independent 256-bit client-held proof']
  request_fingerprint varchar [not null, note: 'keyed fingerprint used to distinguish an exact retry from conflicting proof reuse']
  locale varchar [null, note: 'canonical BCP 47 tag retained for localized resend and scrubbed on completion or abandonment']
  pending_password_hash varchar [null, note: 'Argon2id PHC while active; scrubbed atomically on completion or abandonment']
  expires_at timestamptz [not null, note: 'absolute attempt lifetime; resend never extends it']
  completed_at timestamptz [null, note: 'first successful completion time']
  abandoned_at timestamptz [null, note: 'terminal time for natural expiry or superseding confirmation; mutually exclusive with completed_at']
  activated_account_id uuid [null, note: 'logical winning account id retained as bounded idempotency evidence; deliberately no FK so account privacy deletion neither blocks nor removes the tombstone']
  created_at timestamptz [not null]

  indexes {
    (id, expires_at) [unique, name: 'uq_registration_attempts_id_expiry', note: 'Supports the child composite FK for immutable aggregate expiry']
    (registration_proof_hash) [unique, name: 'uq_registration_attempts_registration_proof', note: 'A client proof belongs to exactly one registration request globally']
    (expires_at, id) [name: 'idx_registration_attempts_pending_expiry', note: 'Partial: WHERE completed_at IS NULL AND abandoned_at IS NULL']
    (completed_at, id) [name: 'idx_registration_attempts_completed_at', note: 'Partial: WHERE completed_at IS NOT NULL']
    (abandoned_at, id) [name: 'idx_registration_attempts_abandoned_at', note: 'Partial: WHERE abandoned_at IS NOT NULL']
    (activated_account_id) [unique, name: 'uq_registration_attempts_activated_account', note: 'Partial: WHERE activated_account_id IS NOT NULL']
  }

  Note: 'Service: Identity aggregate root. Registration proof reuse is rejected while evidence is retained; resends add child tokens; terminal rows scrub password/locale and completed or abandoned tombstones remain for at least 30 days'
}

Table registration_verification_tokens as RegistrationVerificationTokens {
  id uuid [pk, note: 'Server-generated UUIDv7 token id embedded with attempt id in v1e.<attempt-id>.<token-id>.<secret>']
  attempt_id uuid [not null, note: 'part of composite FK -> RegistrationAttempts.(id, expires_at)']
  attempt_expires_at timestamptz [not null, note: 'immutable parent expiry copied for the composite FK and lifetime CHECK']
  verifier_hash varchar [not null, note: 'SHA-256 of the emailed random verifier; raw token is never stored']
  issued_at timestamptz [not null]
  expires_at timestamptz [not null, note: 'per-delivery lifetime bounded by the parent attempt lifetime']
  redeemed_at timestamptz [null, note: 'only the winning token is marked redeemed']

  indexes {
    (attempt_id, issued_at, id) [name: 'idx_registration_verification_tokens_attempt_issued']
    (attempt_id) [name: 'uq_registration_verification_tokens_redeemed', note: 'Partial unique: WHERE redeemed_at IS NOT NULL']
  }

  Note: 'Service: Identity aggregate child. Composite FK (attempt_id, attempt_expires_at) enforces the parent expiry copy and cascades deletion; raw verifier is never persisted'
}

Table refresh_families as RefreshFamilies {
  id uuid [pk, note: 'stable UUIDv7 id of one logical device session']
  account_id uuid [not null, ref: > Accounts.id]
  device_id varchar [null, note: 'Opaque client-installation id; 1..255 Unicode code points, non-blank and without control characters']
  status varchar [not null, note: 'ACTIVE | REVOKED']
  expires_at timestamptz [not null, note: 'absolute 30-day lifetime; credential rotation never extends it']
  created_at timestamptz [not null]
  last_activity_at timestamptz [not null]
  revoked_at timestamptz [null]
  revoke_reason varchar [null, note: 'LOGOUT | TOKEN_REUSE_DETECTED; v1 account deletion persists LOGOUT as a rolling-compatible technical reason while Accounts.status carries the lifecycle cause']
  reuse_detected_at timestamptz [null]

  indexes {
    (account_id, status) [name: 'idx_refresh_families_account_status']
    (expires_at) [name: 'idx_refresh_families_expires_at']
  }

  Note: 'Service: Identity aggregate root. Credential reuse atomically revokes this logical device session'
}

Table refresh_credentials as RefreshCredentials {
  id uuid [pk, note: 'UUIDv7 credential id embedded in v1.<id>.<secret>']
  family_id uuid [not null, ref: > RefreshFamilies.id]
  verifier_hash varchar [not null, note: 'SHA-256 verifier; raw refresh token is never persisted']
  created_at timestamptz [not null]
  redeemed_at timestamptz [null]
  replaced_by_credential_id uuid [null, unique, ref: > RefreshCredentials.id]
  rotation_idempotency_key uuid [null, note: 'same key permits exact replay while the immediate successor remains current']
  retry_until timestamptz [null, note: 'compatibility deadline; new rotations set it to family expiry']

  indexes {
    (family_id, id) [unique, name: 'uq_refresh_credentials_family_id_id']
    (family_id, created_at, id) [name: 'idx_refresh_credentials_family_created']
  }

  Note: 'Service: Identity aggregate child. At most one unredeemed credential per family (partial unique index); replacement must belong to the same family'
}

Table rate_limit_buckets as RateLimitBuckets {
  scope_key varchar [pk, note: 'route + namespace-separated truncated HMAC-SHA-256 identifier of canonical email, IP, token id or refresh family id']
  window_started_at timestamptz [not null]
  attempt_count integer [not null]
  expires_at timestamptz [not null]

  indexes {
    (expires_at) [name: 'idx_rate_limit_buckets_expires_at']
  }

  Note: 'Service: Identity. PostgreSQL-backed counters shared by all replicas'
}

Table outbox_events as OutboxEvents {
  event_id uuid [pk, note: 'UUIDv7 used as JetStream Nats-Msg-Id']
  event_type varchar [not null]
  event_version integer [not null]
  aggregate_type varchar [not null]
  aggregate_id varchar [not null]
  payload jsonb [not null, note: 'notification payload contains compact JWE only, never the raw token/email']
  occurred_at timestamptz [not null]
  available_at timestamptz [not null]
  correlation_id uuid [null]
  causation_id uuid [null]
  trace_id varchar [null]
  claim_id uuid [null, note: 'fencing token for the current publisher lease']
  claimed_until timestamptz [null]
  published_at timestamptz [null]
  attempt_count integer [not null, default: 0]
  last_error varchar [null]

  indexes {
    (available_at, occurred_at) [name: 'idx_outbox_events_pending']
    (claimed_until) [name: 'idx_outbox_events_expired_claims']
    (published_at, event_id) [name: 'idx_outbox_events_published_cleanup']
  }

  Note: 'Service: Identity. Pending and expired-claim indexes are partial on unpublished rows; cleanup index is partial on published rows; claimed and cleaned with FOR UPDATE SKIP LOCKED'
}
